--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "fast-csv": "^4.3.1",
     "walk": "^2.3.14",
     "xml2js": "^0.4.23"
   }
